# Homeostat

./: README.md  pyproject.toml
Sandbox_V1_2/Sandbox/: base.py
src/: Homeostat_internals.py  fitness.py  fitness_homeostat.py  homeostat_experiment.py  multi.py  parital_multi.py  partial_fitness.py
