[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Guy Montag <guy_montag@posteo.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pygame = "^2.3.0"
numpy = "^1.24.2"
matplotlib = "^3.7.1"
scipy = "^1.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
